--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "fresh"
   ],
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -106,5 +106,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
